# blacksmith

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: greasyfork-sync.yml
apps/howtocook/: README.md  pyproject.toml
apps/howtocook/scripts/: run-detect-custom.sh
apps/howtocook/src/howtocook/: __init__.py  __main__.py  cli.py  models.py  parser.py  scraper.py  workflow.py
apps/howtocook/tests/: test_workflow.py
apps/raster-recast/: README.md  pyproject.toml  worker-requirements.txt
apps/raster-recast/src/raster_recast/: __init__.py  __main__.py  ai_backend.py  core.py  gui.py  inference_worker.py  worker.py
apps/raster-recast/tests/: test_ai_backend.py  test_core.py  test_gui.py  test_worker.py
apps/skill-downloader/: README.md  pyproject.toml
apps/skill-downloader/src/skill_downloader/: __init__.py  __main__.py  cli.py  downloader.py  parser.py
clis/: Cargo.toml
clis/cloud/: Cargo.toml
clis/cloud/src/: main.rs
clis/cloud/src/backends/: mod.rs
clis/cloud/src/backends/aliyun/: client.rs  cpfs.rs  mod.rs
clis/cloud/src/commands/: config.rs  cpfs.rs  create.rs  delete.rs  describe.rs  get.rs  list.rs  mod.rs  provider.rs  use_cmd.rs
clis/cloud/src/config/: manager.rs  mod.rs  types.rs
clis/cloud/src/resources/: cpfs.rs  mod.rs
clis/cloud/src/services/: cpfs.rs  mod.rs
clis/hostctl/: Cargo.toml  README.md
clis/hostctl/src/: app.rs  cli.rs  config.rs  hosts.rs  lib.rs  main.rs  profile.rs  tui.rs
scripts/: README.md
scripts/totp-auto-paste/: README.md  totp-auto-paste.user.js
vibe-coding/: CLAUDE.md  README.md  install.sh
vibe-coding/agents/: README.md  backend-architect.md  cloud-architect.md  code-reviewer.md  debugger.md  deployment-engineer.md  front-end-dev.md  security-engineer.md
vibe-coding/rules/: README.md
vibe-coding/rules/lang/: go.mdc  rust.mdc  typescript.mdc
vibe-coding/skills/: README.md
vibe-coding/skills/accessibility-audit/: SKILL.md
vibe-coding/skills/add-documentation/: SKILL.md
vibe-coding/skills/add-error-handling/: SKILL.md
vibe-coding/skills/address-github-pr-comments/: SKILL.md
vibe-coding/skills/create-pr/: SKILL.md
vibe-coding/skills/dangerous-flows/: SKILL.md
vibe-coding/skills/database-migration/: SKILL.md
vibe-coding/skills/deslop/: SKILL.md
vibe-coding/skills/diagrams/: SKILL.md
vibe-coding/skills/docker-best-practices/: SKILL.md
vibe-coding/skills/fix-compile-errors/: SKILL.md
vibe-coding/skills/generate-api-docs/: SKILL.md
vibe-coding/skills/generate-pr-description/: SKILL.md
vibe-coding/skills/git-commit/: SKILL.md
vibe-coding/skills/git-workflow/: SKILL.md  gsync.sh
vibe-coding/skills/kubernetes-best-practices/: SKILL.md
vibe-coding/skills/light-review-existing-diffs/: SKILL.md
vibe-coding/skills/lint-fix/: SKILL.md
vibe-coding/skills/onboard-new-developer/: SKILL.md
vibe-coding/skills/optimize-performance/: SKILL.md
vibe-coding/skills/overview/: SKILL.md
vibe-coding/skills/refactor-code/: SKILL.md
vibe-coding/skills/run-all-tests-and-fix/: SKILL.md
vibe-coding/skills/setup-new-feature/: SKILL.md
vibe-coding/skills/terraform-best-practices/: SKILL.md
vibe-coding/skills/write-unit-tests/: SKILL.md
vibe-coding/skills/xxe-prevention/: SKILL.md
