[workspace]
members = ["hostctl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["heliannuuthus"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# error handling
anyhow = "1.0"
thiserror = "2.0"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }

# cli
clap = { version = "4.5", features = ["derive", "color"] }
colored = "3.1"
indicatif = "0.18"

# terminal ui
ratatui = "0.30"
crossterm = "0.29"

# utils
dirs = "6.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
