[package]
name = "cloud"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cloud resource management CLI tool"
readme = "README.md"

[[bin]]
name = "cloud"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
dirs.workspace = true
dialoguer.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
urlencoding.workspace = true
uuid.workspace = true
rand.workspace = true
tabled.workspace = true
console.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true

[features]
default = ["aliyun"]
aliyun = []
