[package]
name = "hostctl"
description = "A beautiful CLI tool for managing hosts file with interactive TUI"
edition = "2024"

[dependencies]
# Workspace 依赖
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# 特定依赖
ratatui.workspace = true
crossterm.workspace = true
toml.workspace = true
dirs.workspace = true
indicatif.workspace = true
users = "0.11"

[[bin]]
name = "hostctl"
path = "src/main.rs"
